Removed Overflow bug with images

--- a/UI/style.css
+++ b/UI/style.css
@@ -54,6 +54,7 @@ body {
   width: 100%;
   object-fit: cover;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .card-text {
